fixed overlap on profile button

--- a/styles/main.css
+++ b/styles/main.css
@@ -72,6 +72,7 @@ header {
   border: 0.2rem solid var(--tertiary-teal);
   overflow: hidden;
   box-shadow: var(--default-shadow);
+  z-index: 5;
 }
 
 .profile-button:active {
